footer alignment fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,3 +22,6 @@ p {
 video {
     object-fit: contain;
 }
+.footer {
+    text-align: right;
+}
